@@ -3,11 +3,13 @@ package com.hun.market.item.service;
 import com.hun.market.backoffice.dto.ItemModifyDto;
 import com.hun.market.item.domain.Item;
 import com.hun.market.item.dto.ItemDto;
+import com.hun.market.item.dto.ItemDto.ItemCreatResponseDto;
 import com.hun.market.item.exception.ItemNotFoundException;
 import com.hun.market.item.repository.ItemRepository;
 import java.util.Optional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
@@ -30,13 +32,22 @@ public class ItemServiceImpl implements ItemService {
      * 레디슨을 활용한 캐싱 처리
      */
     @Validated
-//    @Cacheable(cacheNames = "itemListCache", key = "#root.targetClass + '.' + #root.methodName + '.' + #page + '.' + #size", sync = true, cacheManager = "itemCacheManager")
+    @Cacheable(cacheNames = "itemListCache", key = "#root.targetClass + '.' + #root.methodName + '.' + #page + '.' + #size", sync = true, cacheManager = "itemCacheManager")
     public List<ItemDto.ItemCreatResponseDto> getItemList(int page, int size) {
         Page<Item> resultItemPage = itemRepository.findAll(PageRequest.of(page, size, Sort.by(Sort.Direction.ASC, "id")));
-        log.info("-----------------------good------------------------");
+        log.info("-----------------------find------------------------");
         return resultItemPage.getContent().stream()
                 .map(this::mapToItemResponseDto)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    @Override
+    public List<ItemDto.ItemCreatResponseDto> getSearchItemList(String query, int page, int size) {
+        Page<Item> resultItemPage = itemRepository.findByItemNameContaining(query, PageRequest.of(page, size, Sort.by(Sort.Direction.ASC, "id")));
+        log.info("-----------------------search------------------------");
+        return resultItemPage.getContent().stream()
+                             .map(this::mapToItemResponseDto)
+                             .toList();
     }
 
     @Override
@@ -56,6 +67,7 @@ public class ItemServiceImpl implements ItemService {
         );
 
     }
+
 
     //    @Override
 //    public Page<ItemResponseDto> paging(Pageable pageable) {
